--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,23 @@
 -i https://pypi.org/simple
-alembic==1.13.2; python_version >= '3.8'
+alembic==1.13.3; python_version >= '3.8'
 amqp==5.2.0; python_version >= '3.6'
 apache-superset==4.0.2; python_version ~= '3.9'
 apispec[yaml]==6.6.1; python_version >= '3.8'
-apsw==3.46.0.1; python_version >= '3.8'
-async-timeout==4.0.3; python_full_version <= '3.11.2'
-attrs==23.2.0; python_version >= '3.7'
-babel==2.15.0; python_version >= '3.8'
+apsw==3.46.1.0; python_version >= '3.8'
+attrs==24.2.0; python_version >= '3.7'
+babel==2.16.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.2.0; python_version >= '3.7'
-billiard==4.2.0; python_version >= '3.7'
+billiard==4.2.1; python_version >= '3.7'
 blinker==1.8.2; python_version >= '3.8'
 bottleneck==1.4.0
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cachelib==0.9.0; python_version >= '3.7'
-cachetools==5.4.0; python_version >= '3.7'
-cattrs==23.2.3; python_version >= '3.8'
+cachetools==5.5.0; python_version >= '3.7'
+cattrs==24.1.2; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
-certifi==2024.7.4; python_version >= '3.6'
-cffi==1.16.0; platform_python_implementation != 'PyPy'
+certifi==2024.8.30; python_version >= '3.6'
+cffi==1.17.1; platform_python_implementation != 'PyPy'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
 click-didyoumean==0.3.1; python_full_version >= '3.6.2'
@@ -26,16 +25,15 @@ click-option-group==0.5.6; python_version >= '3.6' and python_version < '4'
 click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-cron-descriptor==1.4.3
+cron-descriptor==1.4.5
 croniter==3.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 cryptography==42.0.8; python_version >= '3.7'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
 dnspython==2.6.1; python_version >= '3.8'
 email-validator==2.2.0; python_version >= '3.8'
-exceptiongroup==1.2.2; python_version < '3.11'
 flask==2.3.3; python_version >= '3.8'
-flask-appbuilder==4.5.0; python_version ~= '3.7'
+flask-appbuilder==4.5.1; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.0; python_version >= '3.8'
 flask-compress==1.15
@@ -50,30 +48,30 @@ flask-wtf==1.2.1; python_version >= '3.8'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-google-auth==2.32.0
-greenlet==3.0.3; python_version >= '3.7'
-gunicorn==21.2.0; python_version >= '3.5'
+google-auth==2.35.0
+greenlet==3.1.1; python_version >= '3.7'
+gunicorn==21.2.0; sys_platform != 'win32'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
 holidays==0.25; python_version >= '3.7'
 humanize==4.10.0; python_version >= '3.8'
-idna==3.7; python_version >= '3.5'
-importlib-metadata==8.2.0; python_version >= '3.8'
-importlib-resources==6.4.0; python_version >= '3.8'
+idna==3.10; python_version >= '3.6'
+importlib-metadata==8.5.0; python_version >= '3.8'
+importlib-resources==6.4.5; python_version >= '3.8'
 isodate==0.6.1
 itsdangerous==2.2.0; python_version >= '3.8'
 jinja2==3.1.4; python_version >= '3.7'
 jsonschema==4.23.0; python_version >= '3.8'
 jsonschema-specifications==2023.12.1; python_version >= '3.8'
-kombu==5.3.7; python_version >= '3.8'
+kombu==5.4.2; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
 limits==3.13.0; python_version >= '3.8'
 llvmlite==0.43.0; python_version >= '3.9'
 mako==1.3.5; python_version >= '3.8'
-markdown==3.6; python_version >= '3.8'
+markdown==3.7; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
 markupsafe==2.1.5; python_version >= '3.7'
-marshmallow==3.21.3; python_version >= '3.8'
+marshmallow==3.22.0; python_version >= '3.8'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
@@ -86,62 +84,62 @@ ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 packaging==24.1; python_version >= '3.8'
 pandas[performance]==2.0.3; python_version >= '3.8'
-paramiko==3.4.0; python_version >= '3.6'
+paramiko==3.5.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
-platformdirs==4.2.2; python_version >= '3.8'
+platformdirs==4.3.6; python_version >= '3.8'
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
-prompt-toolkit==3.0.47; python_full_version >= '3.7.0'
+prompt-toolkit==3.0.48; python_full_version >= '3.7.0'
 pyarrow==14.0.2; python_version >= '3.8'
-pyasn1==0.6.0; python_version >= '3.8'
-pyasn1-modules==0.4.0; python_version >= '3.8'
+pyasn1==0.6.1; python_version >= '3.8'
+pyasn1-modules==0.4.1; python_version >= '3.8'
 pycparser==2.22; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
-pyjwt==2.8.0; python_version >= '3.7'
+pyjwt==2.9.0; python_version >= '3.8'
 pynacl==1.5.0; python_version >= '3.6'
 pyopenssl==24.2.1
-pyparsing==3.1.2; python_full_version >= '3.6.8'
+pyparsing==3.1.4; python_full_version >= '3.6.8'
 pysocks==1.7.1
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
-pytz==2024.1
-pyyaml==6.0.1; python_version >= '3.6'
+pytz==2024.2
+pyyaml==6.0.2; python_version >= '3.8'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.35.1; python_version >= '3.8'
 requests==2.32.3; python_version >= '3.8'
 requests-cache==1.2.1; python_version >= '3.8'
-rich==13.7.1; python_full_version >= '3.7.0'
-rpds-py==0.19.1; python_version >= '3.8'
+rich==13.8.1; python_full_version >= '3.7.0'
+rpds-py==0.20.0; python_version >= '3.8'
 rsa==4.9; python_version >= '3.6' and python_version < '4'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh[gsheetsapi]==1.2.24; python_version >= '3.8'
+shillelagh[gsheetsapi]==1.2.28; python_version >= '3.8'
 shortid==0.1.2
-simplejson==3.19.2; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
+simplejson==3.19.3; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
 six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.31.0; python_version >= '3.6'
+slack-sdk==3.33.1; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
-sqlalchemy==1.4.53; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
+sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
 sqlglot==23.17.0; python_version >= '3.7'
 sqlparse==0.4.4; python_version >= '3.5'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.26.0; python_version >= '3.8'
+trio==0.26.2; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
-tzdata==2024.1; python_version >= '2'
+tzdata==2024.2; python_version >= '2'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 urllib3[socks]==2.0.7; python_version >= '3.7'
 vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
-werkzeug==3.0.3; python_version >= '3.8'
+werkzeug==3.0.4; python_version >= '3.8'
 wrapt==1.16.0; python_version >= '3.6'
 wsproto==1.2.0; python_full_version >= '3.7.0'
 wtforms==3.1.2; python_version >= '3.8'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
-zipp==3.19.2; python_version >= '3.8'
+zipp==3.20.2; python_version >= '3.8'
 zstandard==0.23.0; platform_python_implementation != 'PyPy'
