--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,44 +1,44 @@
 -i https://pypi.org/simple
-asynch==0.2.4; python_version >= '3.7' and python_version < '4.0'
+asynch==0.2.5; python_version >= '3.9' and python_version < '4.0'
 authlib==1.3.1; python_version >= '3.8'
-bitarray==2.9.2
-blinker==1.8.2; python_version >= '3.8'
-boto3==1.35.29; python_version >= '3.8'
-botocore==1.35.29; python_version >= '3.8'
+bitarray==3.0.0
+blinker==1.9.0; python_version >= '3.9'
+boto3==1.35.60; python_version >= '3.8'
+botocore==1.35.60; python_version >= '3.8'
 cachelib==0.9.0; python_version >= '3.7'
 cachetools==5.5.0; python_version >= '3.7'
 certifi==2024.8.30; python_version >= '3.6'
-cffi==1.17.1; platform_python_implementation != 'PyPy'
-charset-normalizer==3.3.2; python_full_version >= '3.7.0'
+cffi==1.17.1; python_version >= '3.8'
+charset-normalizer==3.4.0; python_full_version >= '3.7.0'
 ciso8601==2.3.1
 click==8.1.7; python_version >= '3.7'
 clickhouse-driver==0.2.9; python_version >= '3.7' and python_version < '4'
 clickhouse-sqlalchemy==0.2.4; python_version >= '3.7' and python_version < '4'
 cmdstanpy==1.2.4; python_version >= '3.8'
-contourpy==1.3.0; python_version >= '3.9'
+contourpy==1.3.1; python_version >= '3.10'
 cryptography==42.0.8; python_version >= '3.7'
 cx-oracle==8.3.0
 cycler==0.12.1; python_version >= '3.8'
-et-xmlfile==1.1.0; python_version >= '3.6'
+et-xmlfile==2.0.0; python_version >= '3.8'
 flask==2.3.3; python_version >= '3.8'
 flask-cors==4.0.2
 flask-mail==0.9.1
 flask-oauth==0.12
 flask-oauthlib==0.9.6
 fonttools==4.54.1; python_version >= '3.8'
-fsspec==2024.9.0; python_version >= '3.8'
-future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+fsspec==2024.10.0; python_version >= '3.8'
+future==1.0.0; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
 gevent==23.9.1; python_version >= '3.8'
-google-api-core[grpc]==2.20.0; python_version >= '3.7'
-google-auth==2.35.0
-google-cloud-bigquery==3.26.0; python_version >= '3.7'
+google-api-core[grpc]==2.23.0; python_version >= '3.7'
+google-auth==2.36.0; python_version >= '3.7'
+google-cloud-bigquery==3.27.0; python_version >= '3.7'
 google-cloud-core==2.4.1; python_version >= '3.7'
 google-crc32c==1.6.0; python_version >= '3.9'
 google-resumable-media==2.7.2; python_version >= '3.7'
-googleapis-common-protos==1.65.0; python_version >= '3.7'
+googleapis-common-protos==1.66.0; python_version >= '3.7'
 greenlet==3.1.1; python_version >= '3.7'
-grpcio==1.66.2
-grpcio-status==1.66.2
+grpcio==1.67.1; python_version >= '3.8'
+grpcio-status==1.67.1; python_version >= '3.8'
 holidays==0.25; python_version >= '3.7'
 httplib2==0.22.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 idna==3.10; python_version >= '3.6'
@@ -52,19 +52,19 @@ jmespath==1.0.1; python_version >= '3.7'
 kiwisolver==1.4.7; python_version >= '3.8'
 leb128==1.0.8
 lz4==4.3.3; python_version >= '3.8'
-markupsafe==2.1.5; python_version >= '3.7'
+markupsafe==3.0.2; python_version >= '3.9'
 matplotlib==3.9.2; python_version >= '3.9'
 mysqlclient==2.2.0; python_version >= '3.8'
 numpy==1.23.5; python_version >= '3.8'
 oauth2==1.9.0.post1
 oauthlib==2.1.0
 openpyxl==3.1.2; python_version >= '3.6'
-packaging==24.1; python_version >= '3.8'
+packaging==24.2; python_version >= '3.8'
 pandas[performance]==2.0.3; python_version >= '3.8'
 pillow==10.2.0; python_version >= '3.8'
 prophet==1.1.5; python_version >= '3.7'
-proto-plus==1.24.0; python_version >= '3.7'
-protobuf==5.28.2; python_version >= '3.8'
+proto-plus==1.25.0; python_version >= '3.7'
+protobuf==5.28.3; python_version >= '3.8'
 psycopg2==2.9.7; python_version >= '3.6'
 pure-sasl==0.6.2
 pyasn1==0.6.1; python_version >= '3.8'
@@ -74,44 +74,44 @@ pycparser==2.22; python_version >= '3.8'
 pydruid==0.6.5
 pyhive==0.7.0
 pyldap==3.0.0
-pyparsing==3.1.4; python_full_version >= '3.6.8'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pyparsing==3.2.0; python_version >= '3.9'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 python-ldap==3.4.4; python_version >= '3.6'
 pytz==2024.2
 requests==2.32.3; python_version >= '3.8'
 requests-oauthlib==1.1.0
 rsa==4.9; python_version >= '3.6' and python_version < '4'
-s3transfer==0.10.2; python_version >= '3.8'
-setuptools==75.1.0; python_version >= '3.8'
-six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+s3transfer==0.10.3; python_version >= '3.8'
+setuptools==75.5.0; python_version >= '3.9'
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
 sqlalchemy==1.4.54; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 sqlalchemy-bigquery==1.8.0; python_version < '3.12' and python_version >= '3.7'
 sqlalchemy-redshift==0.8.14; python_version >= '3.4'
 sqlalchemy-trino==0.5.0; python_version >= '3.7'
 stanio==0.5.1; python_version >= '3.8'
 tenacity==9.0.0; python_version >= '3.8'
-thrift==0.16.0; python_version >= '3.0'
+thrift==0.16.0
 thrift-sasl==0.4.3
-tqdm==4.66.5; python_version >= '3.7'
+tqdm==4.67.0; python_version >= '3.7'
 trino[sqlalchemy]==0.330.0; python_version >= '3.8'
 tzdata==2024.2; python_version >= '2'
 tzlocal==5.2; python_version >= '3.8'
 urllib3[socks]==2.0.7; python_version >= '3.7'
-werkzeug==3.0.4; python_version >= '3.8'
+werkzeug==3.1.3; python_version >= '3.9'
 zope.event==5.0; python_version >= '3.7'
-zope.interface==7.0.3; python_version >= '3.8'
+zope.interface==7.1.1; python_version >= '3.8'
 zstd==1.5.5.1
-alembic==1.13.3; python_version >= '3.8'
-amqp==5.2.0; python_version >= '3.6'
-apache-superset==4.0.2; python_version ~= '3.9'
-apispec[yaml]==6.6.1; python_version >= '3.8'
+alembic==1.14.0; python_version >= '3.8'
+amqp==5.3.1; python_version >= '3.6'
+apache-superset==4.1.0; python_version ~= '3.9'
+apispec[yaml]==6.7.1; python_version >= '3.9'
 apsw==3.46.1.0; python_version >= '3.8'
 attrs==24.2.0; python_version >= '3.7'
 babel==2.16.0; python_version >= '3.8'
 backoff==2.2.1; python_version >= '3.7' and python_version < '4.0'
 bcrypt==4.2.0; python_version >= '3.7'
 billiard==4.2.1; python_version >= '3.7'
-bottleneck==1.4.0
+bottleneck==1.4.2; python_version >= '3.9'
 brotli==1.1.0; platform_python_implementation != 'PyPy'
 cattrs==24.1.2; python_version >= '3.8'
 celery==5.4.0; python_version >= '3.8'
@@ -121,15 +121,15 @@ click-plugins==1.1.1
 click-repl==0.3.0; python_version >= '3.6'
 colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
 cron-descriptor==1.4.5
-croniter==3.0.3; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
+croniter==5.0.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecated==1.2.14; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 deprecation==2.1.0
-dnspython==2.6.1; python_version >= '3.8'
+dnspython==2.7.0; python_version >= '3.9'
 email-validator==2.2.0; python_version >= '3.8'
-flask-appbuilder==4.5.1; python_version ~= '3.7'
+flask-appbuilder==4.5.2; python_version ~= '3.7'
 flask-babel==2.0.0
 flask-caching==2.3.0; python_version >= '3.8'
-flask-compress==1.15
+flask-compress==1.17; python_version >= '3.9'
 flask-jwt-extended==4.6.0; python_version >= '3.7' and python_version < '4'
 flask-limiter==3.8.0; python_version >= '3.8'
 flask-login==0.6.3; python_version >= '3.7'
@@ -137,39 +137,41 @@ flask-migrate==3.1.0; python_version >= '3.6'
 flask-session==0.8.0; python_version >= '3.8'
 flask-sqlalchemy==2.5.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 flask-talisman==1.1.0
-flask-wtf==1.2.1; python_version >= '3.8'
+flask-wtf==1.2.2; python_version >= '3.9'
 func-timeout==4.3.5
 geographiclib==2.0; python_version >= '3.7'
 geopy==2.4.1; python_version >= '3.7'
-gunicorn==21.2.0; sys_platform != 'win32'
+gunicorn==23.0.0; python_version >= '3.7'
 h11==0.14.0; python_version >= '3.7'
 hashids==1.3.1; python_version >= '2.7'
-humanize==4.10.0; python_version >= '3.8'
+humanize==4.11.0; python_version >= '3.9'
 importlib-metadata==8.5.0; python_version >= '3.8'
-isodate==0.6.1
+isodate==0.7.2; python_version >= '3.7'
+jsonpath-ng==1.7.0
 jsonschema==4.23.0; python_version >= '3.8'
-jsonschema-specifications==2023.12.1; python_version >= '3.8'
+jsonschema-specifications==2024.10.1; python_version >= '3.9'
 kombu==5.4.2; python_version >= '3.8'
 korean-lunar-calendar==0.3.1
 limits==3.13.0; python_version >= '3.8'
 llvmlite==0.43.0; python_version >= '3.9'
-mako==1.3.5; python_version >= '3.8'
+mako==1.3.6; python_version >= '3.8'
 markdown==3.7; python_version >= '3.8'
 markdown-it-py==3.0.0; python_version >= '3.8'
-marshmallow==3.22.0; python_version >= '3.8'
+marshmallow==3.23.1; python_version >= '3.9'
 marshmallow-sqlalchemy==0.28.2; python_version >= '3.7'
 mdurl==0.1.2; python_version >= '3.7'
 msgpack==1.0.8; python_version >= '3.8'
 msgspec==0.18.6; python_version >= '3.8'
 nh3==0.2.18
-numba==0.60.0
-numexpr==2.10.1
+numba==0.60.0; python_version >= '3.9'
+numexpr==2.10.1; python_version >= '3.9'
 ordered-set==4.1.0; python_version >= '3.7'
 outcome==1.3.0.post0; python_version >= '3.7'
 paramiko==3.5.0; python_version >= '3.6'
 parsedatetime==2.6
 pgsanity==0.2.9
 platformdirs==4.3.6; python_version >= '3.8'
+ply==3.11
 polyline==2.0.2; python_version >= '3.7'
 prison==0.2.1
 prompt-toolkit==3.0.48; python_full_version >= '3.7.0'
@@ -177,29 +179,29 @@ pyarrow==14.0.2; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
 pyjwt==2.9.0; python_version >= '3.8'
 pynacl==1.5.0; python_version >= '3.6'
-pyopenssl==24.2.1
-pysocks==1.7.1
+pyopenssl==24.2.1; python_version >= '3.7'
+pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.0.1; python_version >= '3.8'
 python-geohash==0.8.5
 pyyaml==6.0.2; python_version >= '3.8'
 redis==4.6.0; python_version >= '3.7'
 referencing==0.35.1; python_version >= '3.8'
 requests-cache==1.2.1; python_version >= '3.8'
-rich==13.8.1; python_full_version >= '3.7.0'
-rpds-py==0.20.0; python_version >= '3.8'
+rich==13.9.4; python_full_version >= '3.8.0'
+rpds-py==0.21.0; python_version >= '3.9'
 selenium==4.9.1; python_version >= '3.7'
-shillelagh[gsheetsapi]==1.2.28; python_version >= '3.8'
+shillelagh[gsheetsapi]==1.3.2; python_version >= '3.9'
 shortid==0.1.2
-simplejson==3.19.3; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2, 3.3'
-slack-sdk==3.33.1; python_version >= '3.6'
+simplejson==3.19.3; python_version >= '2.5' and python_version not in '3.0, 3.1, 3.2'
+slack-sdk==3.33.3; python_version >= '3.6'
 sniffio==1.3.1; python_version >= '3.7'
 sortedcontainers==2.4.0
 sqlalchemy-utils==0.38.3; python_version ~= '3.6'
-sqlglot==23.17.0; python_version >= '3.7'
-sqlparse==0.4.4; python_version >= '3.5'
+sqlglot==25.30.0; python_version >= '3.7'
+sqlparse==0.5.1; python_version >= '3.8'
 sshtunnel==0.4.0
 tabulate==0.8.10; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4'
-trio==0.26.2; python_version >= '3.8'
+trio==0.27.0; python_version >= '3.8'
 trio-websocket==0.11.1; python_version >= '3.7'
 typing-extensions==4.12.2; python_version >= '3.8'
 url-normalize==1.4.3; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
@@ -207,8 +209,8 @@ vine==5.1.0; python_version >= '3.6'
 wcwidth==0.2.13
 wrapt==1.16.0; python_version >= '3.6'
 wsproto==1.2.0; python_full_version >= '3.7.0'
-wtforms==3.1.2; python_version >= '3.8'
+wtforms==3.2.1; python_version >= '3.9'
 wtforms-json==0.3.5
 xlsxwriter==3.0.9; python_version >= '3.6'
-zipp==3.20.2; python_version >= '3.8'
-zstandard==0.23.0; platform_python_implementation != 'PyPy'
+zipp==3.21.0; python_version >= '3.9'
+zstandard==0.23.0; python_version >= '3.8'
